fixed title and wrapped init.js in document.ready

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ a:visited {
 {
 	text-align: center;
 	padding-top: 13%;
-	padding-bottom: 13%;
+	padding-bottom:10%;
 	margin-bottom: 50px;
 }
 
